--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="display">
       <input type="text" id="result" disabled>
     </div>
+    <div class="rule">  
+      <span id = "string"></span>
+    </div>
     <div class="buttons">
       <button class="operator" id="clear">C</button>
       <button class="operator" id="backspace">&#8676;</button>
